fix honeycomb styling on smaller screens

--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ nav li a:hover::before {
 /* --- SECTIONS ------------------------------------ */
 
 section {
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   position: relative;
   display: flex;
@@ -195,6 +195,7 @@ section {
   text-transform: uppercase;
   letter-spacing: 2px;
   color: var(--primaryColor);
+  padding-left: 15px;
 }
 
 section h1 {
@@ -285,6 +286,7 @@ section.projects {
   display: flex;
   flex-wrap: wrap;
   list-style: none;
+  position: absolute;
   -webkit-box-pack: center;
   justify-content: center;
   -webkit-box-align: center;
@@ -292,17 +294,15 @@ section.projects {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0;
-  transform: translateY(80px);
 }
 
 .honeycomb-cell {
   -webkit-box-flex: 0;
-  flex: 0 1 250px;
   max-width: 250px;
-  height: 137.5px;
+  height: 137px;
   margin: 65.4px 12.5px 25px;
   position: relative;
-  padding: 0.5rem;
+  padding: 0.5em;
   text-align: center;
   z-index: 1;
   box-shadow: 0px 0px 15px 0 rgba(0, 0, 0, 0.1);
@@ -430,57 +430,27 @@ button:active {
   transform: translate(0, 0.3rem);
 }
 
-@media (max-width: 550px) {
+@media (max-width: 415px) {
+  section.home .name {
+    left: 0.5rem;
+  }
+
+  .honeycomb {
+    flex-direction: column;
+    max-height: 100%;
+    max-width: 90%;
+  }
   .honeycomb-cell {
-    margin: 81.25px 25px;
+    height: 68.5px;
+    width: 125px;
+  }
+
+  .honeycomb-cell_title {
+    font-size: 14px;
   }
 }
 
-@media (max-width: 550px) and (max-width: 825px) {
-  .honeycomb-cell {
-    margin-right: calc(50% - 125px);
-    margin-left: calc(50% - 125px);
-  }
-
-  .honeycomb-cell_Hidden:nth-child(3n + 4) {
-    display: block;
-  }
-}
-
-@media (max-width: 825px) and (max-width: 1100px) {
-  .honeycomb-cell:nth-child(5n + 4) {
-    margin-left: calc(50% 275%);
-  }
-
-  .honeycomb-cell:nth-child(5n + 5) {
-    margin-left: calc(50% 275%);
-  }
-
-  .honeycomb-cell_Hidden:nth-child(5n),
-  .honeycomb-cell_Hidden:nth-child(5n + 3) {
-    display: block;
-  }
-}
-
-@media (max-width: 1100px) {
-  .honeycomb-cell:nth-child(7n + 5) {
-    margin-left: calc(50% - 400px);
-  }
-
-  .honeycomb-cell:nth-child(7n + 7),
-  .honeycomb-cell:nth-child(7n + 5):nth-child(2) {
-    margin-right: calc(50% - 400px);
-  }
-
-  .honeycomb-cell_Hidden:nth-child(7n + 7),
-  .honeycomb-cell_Hidden:nth-child(7n + 9),
-  .honeycomb-cell_Hidden:nth-child(7n + 11) {
-    display: block;
-  }
-}
-
-/* Media Query: Large Smartphone (Vertical) */
-@media (max-width: 600px) {
+@media (min-width: 415px) and (max-width: 550px) {
   .menu-bars {
     top: 0.5rem;
     right: 1rem;
@@ -489,12 +459,15 @@ button:active {
   section.home .name {
     top: 1rem;
     left: 1rem;
-    font-size: 1rem;
   }
 
   section.home .intro,
   section.contact {
     padding: 0 10px;
+  }
+
+  section.about .info {
+    width: 90%;
   }
 
   section.about ul {
@@ -503,9 +476,48 @@ button:active {
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
+    font-size: 4em;
   }
 
   .break {
     flex-basis: 100%;
+  }
+
+  .honeycomb-cell_title {
+    font-size: 1.2rem;
+  }
+
+  .honeycomb-cell {
+    height: 89.05px;
+    width: 162.5px;
+    margin: 55px;
+  }
+}
+
+@media (min-width: 550px) and (max-width: 825px) {
+  .honeycomb-cell:nth-of-type(2) {
+    margin-right: calc(50% - 125px);
+  }
+
+  .honeycomb-cell:nth-of-type(3) {
+    margin-left: calc(50% - 400px);
+  }
+
+  .honeycomb_Hidden:nth-of-type(2) {
+    display: block;
+  }
+}
+
+@media (min-width: 825px) and (max-width: 1100px) {
+  .honeycomb-cell:nth-of-type(1) {
+    margin-left: calc(25% - 135px);
+  }
+
+  .honeycomb-cell:nth-of-type(4) {
+    margin-right: calc(50% - 155px);
+  }
+
+  .honeycomb_Hidden:nth-of-type(5) {
+    display: block;
   }
 }
